# decent_credit

./: .gitignore  Cargo.toml  README.md  dfx.json  excel_data.json  init_data.sh  package-lock.json  package.json
public/: index.html
src/decent_credit_backend/: Cargo.toml  README  decent_credit_backend.did
src/decent_credit_backend/src/: lib.rs
src/decent_credit_backend/src/api/: admin_api.rs  admin_institution_api.rs  admin_route.rs  credit_api.rs  credit_assessment_api.rs  credit_route.rs  dashboard_api.rs  dashboard_route.rs  history_api.rs  history_route.rs  mod.rs  record_api.rs  record_route.rs  routes.rs
src/decent_credit_backend/src/models/: credit.rs  dashboard.rs  dcc.rs  institution.rs  mod.rs  record.rs  user.rs
src/decent_credit_backend/src/services/: admin.rs  admin_institution_service.rs  admin_service.rs  credit_service.rs  crypto_service.rs  dashboard_service.rs  mod.rs  record_service.rs  record_services.rs  reports_storage.rs  storage_service.rs  token_service.rs  zk_proof_service.rs
src/decent_credit_backend/src/utils/: error.rs  logger.rs
src/decent_credit_frontend/: dfx.json  package-lock.json  package.json  tailwind.config.js  webpack.config.js
src/decent_credit_frontend/public/: index.html
src/decent_credit_frontend/src/: App.jsx  index.html  index.js
src/declarations/decent_credit_backend/: decent_credit_backend.did  index.d.ts  index.js  (+2 more)
src/token/: token.did
src_backup/decent_credit_backend/: Cargo.toml  decent_credit_backend.did
src_backup/decent_credit_frontend/: package-lock.json  package.json  webpack.config.js
(+78 files in other folders)
