[package]
name = "decent_credit_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.9.9", features = ["parser"] }
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-stable-structures = "0.5.6"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = { version = "0.10.7", default-features = false }
bincode = "1.3"
ff = { version = "0.12", default-features = false }
hex = "0.4.3"

aes-gcm = { version = "0.10.2", default-features = false, features = ["alloc", "aes"] }
ed25519-dalek = { version = "2.0", default-features = false, features = ["rand_core"] }
base64 = { version = "0.21.4" }
getrandom = { version = "0.2.10", default-features = false, features = ["js"] }
rand = { version = "0.8.5", features = ["std", "getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }

# 零知识证明相关依赖
pairing = "0.23"
bellman = { version = "0.13.1", features = ["groth16"] }
bls12_381 = { version = "0.7.1", features = ["pairings"] }
chrono = { version = "0.4", features = ["serde"] }